transaction API and Documentation
